--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -78,6 +78,7 @@
   .projectLinks {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 10px;
 
     @media only screen and (max-width: 480px) {
       overflow: scroll;
