--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -24,12 +24,19 @@
   h1 {
     padding: 10px 0;
     width: 100%;
-    // position: sticky;
     top: 0;
     background: #2b2a34;
     z-index: 100;
     cursor: pointer;
-    transition: border-bottom 0.2s ease-in-out;
+
+    @media only screen and (max-width: 640px) {
+      user-select: none;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+    }
   }
 
   ul {
